<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LandingPage"
    android:gravity="top|center_horizontal"
    android:background="@color/background_color">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_title"
            android:id="@+id/app_lbl1"
            android:layout_alignParentTop="true" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app1"
            android:onClick="showSpotifyStreamer"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:background="@color/btn_color"
            android:layout_marginTop="5dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app2"
            android:id="@+id/button2"
            android:onClick="showScoresApp"
            android:layout_gravity="center_horizontal"
            android:background="@color/btn_color"
            android:layout_marginTop="5dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app3"
            android:id="@+id/button3"
            android:onClick="showLibraryApp"
            android:layout_gravity="center_horizontal"
            android:background="@color/btn_color"
            android:layout_marginTop="5dp" />



        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app4"
            android:id="@+id/button4"
            android:onClick="showBuildItBigger"
            android:layout_gravity="center_horizontal"
            android:background="@color/btn_color"
            android:layout_marginTop="5dp" />



        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app5"
            android:id="@+id/button5"
            android:onClick="showXYZReader"
            android:layout_gravity="center_horizontal"
            android:background="@color/btn_color"
            android:layout_marginTop="5dp" />


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app6"
            android:id="@+id/button6"
            android:onClick="showCapstone"
            android:layout_gravity="center_horizontal"
            android:background="@color/spl_btn_color"
            android:layout_marginTop="5dp" />

    </LinearLayout>
</RelativeLayout>
